--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@ announcements_card: true
 blog_card: true
 ---
 
-<h1>SoyBase</h1>
+<h1 style="font-weight: bold;">SoyBase</h1>
 
-<p class="uk-text-default">SoyBase integrates genetic and genomic information to aid
+<p style="font-weight: bold; color: black;" class="uk-text-default">SoyBase integrates genetic and genomic information to aid
  soybean breeders and researchers. This instance of the site has been ported to a 
  different framework in order to accommodate the rapidly-growing genomic data available. 
  We anticipate that that this transition will continue through 2023. 
  In the meantime, you can also continue to use <a href="https://soybase.org/" target="_blank">"SoyBase classic"</a>.
 </p>
 
-<p>
+<p style="font-weight: bold; color: black;">
   The site is organized as follows. 
   See <a href="/resources">GENOMICS</a> to access resources and tools such as browsers, InterMine instances, and other visualization tools. 
   See <a href="/collections">DATA COLLECTIONS</a> to access data sets for download. 
@@ -24,32 +24,32 @@ blog_card: true
 </p>
 
 <dl>
-  <dt><a href="{{ "/tools" | relative_url }}">Tools</a></dt>
-  <dd>Analysis tools for soybean: gene families and phylogenies, synteny visualization, etc. search, etc.</dd>
+  <dt style="font-weight: bold; font-size: 16pt;"><a href="{{ "/tools" | relative_url }}">Tools</a></dt>
+  <dd style="font-weight: bold; color: black;">Analysis tools for soybean: gene families and phylogenies, synteny visualization, etc. search, etc.</dd>
 
-  <dt><a href="{{ "/maps" | relative_url }}">Maps</a></dt>
-  <dd>Soybean genetic maps, the SoyMine interface to SoyBase data, and visualization tools for exploring GWAS, QTL and diversity data.</dd>
+  <dt style="font-weight: bold; font-size: 16pt;"><a href="{{ "/maps" | relative_url }}">Maps</a></dt>
+  <dd style="font-weight: bold; color: black;">Soybean genetic maps, the SoyMine interface to SoyBase data, and visualization tools for exploring GWAS, QTL and diversity data.</dd>
 
-  <dt><a href="{{ "/resources" | relative_url }}">Genomics</a></dt>
-  <dd>Genomic resources for soybean: data sets, genome browsers, pan-gene sets, synteny visualizations, etc.</dd>
+  <dt style="font-weight: bold; font-size: 16pt;"><a href="{{ "/resources" | relative_url }}">Genomics</a></dt>
+  <dd style="font-weight: bold; color: black;">Genomic resources for soybean: data sets, genome browsers, pan-gene sets, synteny visualizations, etc.</dd>
     
-  <dt><a href="{{ "/collections" | relative_url }}">Data Collections</a></dt>
-  <dd>View synopses of and links to individual SoyBase Datastore collections.</dd>
+  <dt style="font-weight: bold; font-size: 16pt;"><a href="{{ "/collections" | relative_url }}">Data Collections</a></dt>
+  <dd style="font-weight: bold; color: black;">View synopses of and links to individual SoyBase Datastore collections.</dd>
   
-  <dt><a href="{{ "/projects" | relative_url }}">Projects</a></dt>
-  <dd>Projects associated with or contributed by the soybean research-community.</dd>
+  <dt style="font-weight: bold; font-size: 16pt;"><a href="{{ "/projects" | relative_url }}">Projects</a></dt>
+  <dd style="font-weight: bold; color: black;">Projects associated with or contributed by the soybean research-community.</dd>
   
-  <dt><a href="{{ "/community" | relative_url }}">Community</a></dt>
-  <dd>Other community resources for soybean research.</dd>
+  <dt style="font-weight: bold; font-size: 16pt;"><a href="{{ "/community" | relative_url }}">Community</a></dt>
+  <dd style="font-weight: bold; color: black;">Other community resources for soybean research.</dd>
   
-  <dt><a href="{{ "/about" | relative_url }}">About & Contact</a></dt>
-  <dd>Information about soybean data such as nomenclature, data submission. Also, a form to contact us if you have questions or suggestions!</dd>
+  <dt style="font-weight: bold; font-size: 16pt;"><a href="{{ "/about" | relative_url }}">About & Contact</a></dt>
+  <dd style="font-weight: bold; color: black;">Information about soybean data such as nomenclature, data submission. Also, a form to contact us if you have questions or suggestions!</dd>
   
-  <dt><a href="{{ "/help" | relative_url }}">Help & Tutorials</a></dt>
+  <dt style="font-weight: bold; font-size: 16pt;"><a href="{{ "/help" | relative_url }}">Help & Tutorials</a></dt>
   <dd>Videos and tutorials for working with SoyBase, and other videos about soybean.</dd>
 
-  <dt><a href="{{ "/blog" | relative_url }}">Blog</a></dt>
-  <dd>Learn about new data and tools available from LIS.</dd>
+  <dt style="font-weight: bold; font-size: 16pt;"><a href="{{ "/blog" | relative_url }}">Blog</a></dt>
+  <dd style="font-weight: bold; color: black;">Learn about new data and tools available from LIS.</dd>
 </dl>
 
 <h2>Funding and Development</h2>
