--- a/tools/index.html
+++ b/tools/index.html
@@ -2,16 +2,16 @@
 title: Tools
 tools_menu: true
 ---
-{% assign groups = site.data.tools | group_by: "category" | sort: "name" %}
+{% assign groups = site.data.tools | group_by: "category" | sort: "name" | reverse %}
 
-<h1>Informatic Tools</h1>
+<h1 style="font-weight: bold;">Informatic Tools</h1>
 
 {% for group in groups %}
 <h2>{{ group.name }}</h2>
 <dl>
   {% for item in group.items %}
-  <dt><a href="{{ item.url }}">{{ item.name }}</a></dt>
-  <dd>{{ item.description }}</dd>
+  <dt style="font-weight: bold; font-size: 14pt;"><a href="{{ item.url }}">{{ item.name }}</a></dt>
+  <dd style="font-weight: bold; font-size: 12pt;">{{ item.description }}</dd>
   {% endfor %}
 </dl>
 {% endfor %}
