Many CSS and order changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ announcements_card: true
 blog_card: true
 ---
 
-<h1 style="font-weight: bold;">SoyBase</h1>
+<img src="/assets/img/sb_logo.png" style="float: left;" width="60px" height="60px"><h1 style="font-weight: bold;color:darkgreen"><i>SoyBase</i></h1>
 
 <p style="font-weight: bold; color: black;" class="uk-text-default">SoyBase integrates genetic and genomic information to aid
  soybean breeders and researchers. This instance of the site has been ported to a 
@@ -46,14 +46,14 @@ blog_card: true
   <dd style="font-weight: bold; color: black;">Information about soybean data such as nomenclature, data submission. Also, a form to contact us if you have questions or suggestions!</dd>
   
   <dt style="font-weight: bold; font-size: 16pt;"><a href="{{ "/help" | relative_url }}">Help & Tutorials</a></dt>
-  <dd>Videos and tutorials for working with SoyBase, and other videos about soybean.</dd>
+  <dd style="font-weight: bold; color: black;">Videos and tutorials for working with SoyBase, and other videos about soybean.</dd>
 
   <dt style="font-weight: bold; font-size: 16pt;"><a href="{{ "/blog" | relative_url }}">Blog</a></dt>
   <dd style="font-weight: bold; color: black;">Learn about new data and tools available from LIS.</dd>
 </dl>
 
 <h2>Funding and Development</h2>
-<p>LIS is funded by the USDA-ARS. LIS is developed and hosted by the National Center for Genome Resources (NCGR) and the USDA-ARS SoyBase and Legume Clade Database group at Ames, IA, with the help of many other researchers.</p>
+<p style="color:black">SoyBase and LIS is funded by the USDA-ARS. LIS is developed and hosted by the National Center for Genome Resources (NCGR) and the USDA-ARS SoyBase and Legume Clade Database group at Ames, IA, with the help of many other researchers.</p>
 <div class="uk-child-width-expand@s uk-flex uk-flex-middle" uk-grid>
   <a href="https://www.ars.usda.gov/main/main.htm" target="_blank" title="USDA ARS website">
     <img src="{{ "assets/img/usda.svg" | relative_url }}" width="150" height="auto" alt="USDA logo"/>
