--- a/resources/index.html
+++ b/resources/index.html
@@ -4,7 +4,7 @@ title: Genomic Resources
 sitemap: sequence map
 tools_menu: true
 ---
-
+<style>body {font-size: 12pt; color:black}</style>
 {% assign genus = "Glycine" %}
 
 {% for about_file in site.data.datastore-metadata[genus].GENUS.about_this_collection %}
