--- a/tools/index.html
+++ b/tools/index.html
@@ -11,7 +11,7 @@ tools_menu: true
 <dl>
   {% for item in group.items %}
   <dt style="font-weight: bold; font-size: 14pt;"><a href="{{ item.url }}">{{ item.name }}</a></dt>
-  <dd style="font-weight: bold; font-size: 12pt;">{{ item.description }}</dd>
+  <dd style="font-weight: bold; font-size: 12pt; color:black">{{ item.description }}</dd>
   {% endfor %}
 </dl>
 {% endfor %}
