--- a/tools/browsers/index.html
+++ b/tools/browsers/index.html
@@ -3,35 +3,49 @@ title: Genome browsers
 sitemap: sequence map
 tools_menu: true
 ---
-
+<style>body {font-size: 12pt; color:black}</style>
 <h2>Genome browsers</h2>
 
 <p>
   Genome browsers are available for most of the genome assemblies at SoyBase. 
-  These can be accessed from the <a href="/resources">GENOMICS</a> tab, with browsers listed under each accession -- or directly from the links below.
+  These can also be accessed from the <a href="/resources">GENOMICS</a> tab, with browsers listed under each accession -- or directly from the links below.
 </p>
 
-<h4><i>Glycine max</i> accessions</h4>
+<h4><b><i>Glycine max</i></b> accessions</h4>
 
 <b>Wm82</b> (Northern United States) <br/>
 Williams 82, the soybean cultivar used to produce the reference genome sequence, was derived from backcrossing a phytophthora root rot resistance locus from the donor parent Kingwa into the recurrent parent Williams.
 <ul>
+  <li><a href="https://soybase.org/gb2/gbrowse/glyma.Wm82.gnm4/">Genome Browser (GBrowse)</a> for Wm82 assembly 4</li>
   <li><a href="https://soybase.org/gb2/gbrowse/gmax2.0">Genome Browser (GBrowse)</a> for Wm82 assembly 2.0</li>
   <li><a href="https://soybase.org/gb2/gbrowse/gmax1.01">Genome Browser (GBrowse)</a> for Wm82 assembly 1.01</li>
   {% capture map_path %}/assets/js/jbrowse/?assembly=Wm82_ISU01.gnm2&tracks=Wm82_ISU01.gnm2.ann1&loc=glyma.Wm82_ISU01.gnm2.Gm01:1-1000000{% endcapture %}
   <li><a href="{{ map_path | relative_url }}">Genome Browser (JBrowse)</a> for Wm82_ISU01 assembly 2</li>
 </ul>
 
+<b>Fiskeby III</b> (Northern United States)
+<p>Cultivar Fiskeby III is from the Northern germplasm pool. Bred by the late Dr. Sven Holmberg in Fiskeby, Norrköpping, Sweden. 
+  Highly nutritious — up to 40% protein, high in calcium, iron, and vitamins (particularly A, B1, B12, and C). Thrives in northern climates. 75-80 days.
+  Fiskeby III is also resistant to a number of diseases.
+</p>
+<ul>
+  <li><a href="https://soybase.org/gb2/gbrowse/glyma.FiskebyIII.gnm1/">Genome Browser (GBrowse)</a> for glycine max Cv. Fiskeby III genome assembly 
+    version 1
+  </li>
+</ul>
+
+<b>Lee</b> (Southern United States) <br/>
+Cultivar Lee, which derives from a cross of Chinese lines CNS and S-100, has been widely used as a parent in many breeding projects in the Southern U.S. 
+and in Brazil. The variety is notable for resistance to Phytophthora rot, 
+Peanut Mottle Virus, and bacterial pustule <a href="http://doi.org/10.1590/S1415-47572013005000041">(Wysmierski and Vello, 2013)</a>.
+<ul>
+  <li><a href="https://soybase.org/gb2/gbrowse/glyma.Lee.gnm1">Genome Browser (GBrowse)</a> for glycine max Cv. Lee genome assembly verson 1</li>
+</ul>
+
 <b>Zh13</b> (China) <br/>
 Zhonghuang 13 is a Chinese cultivar derived from accessions Yudou 18 and Zhongzuo 90052-76 by pedigree selection for high yield and stress tolerance (Shen et al., 2018; https://doi.org/10.1007/s11427-018-9360-0).
 <ul>
   <li><a href="https://soybase.org/gb2/gbrowse/glyma.Zh13.gnm1">Genome Browser (GBrowse)</a> for glycine max Zh13 genome assembly verson 1</li>
-</ul>
-
-<b>Lee</b> (Southern United States) <br/>
-Cultivar Lee, which derives from a cross of Chinese lines CNS and S-100, has been widely used as a parent in many breeding projects in the Southern U.S. and in Brazil (Wysmierski and Vello, 2013; http://doi.org/10.1590/S1415-47572013005000041). The variety is notable for resistance to Phytophthora rot, Peanut Mottle Virus, and bacterial pustule (Wysmierski and Vello, 2013).
-<ul>
-  <li><a href="https://soybase.org/gb2/gbrowse/glyma.Lee.gnm1">Genome Browser (GBrowse)</a> for glycine max Lee genome assembly verson 1</li>
 </ul>
 
 <h4><i>Glycine soja</i> accessions</h4>
