--- a/resources/index.html
+++ b/resources/index.html
@@ -41,8 +41,9 @@ tools_menu: true
   <hr/>
 
   <h3><i>{{ species_resources.genus }} {{ species_resources.species }}</i>: {{ genus_resources.commonName }}</h3>
-  {% capture species_photo %}{% file_exists assets/img/species_images/{{ species_resources.abbrev }}.jpg %}{% endcapture %}
-  {% if species_photo == "true" %}
+  {% assign species_photo = false %}
+  {% for static_file in site.static_files %}{% if static_file.path == "/assets/img/species_images/{{ species_resources.abbrev }}.jpg" %}{% assign species_photo = true %}{% endif %}{% endfor %}
+  {% if species_photo %}
     <div style="float:right;margin:10px;border:1px solid darkgreen;">
       <img src="/assets/img/species_images/{{ species_resources.abbrev }}.jpg" alt="Image: {{ species_resources.abbrev }}"/><br/>
     </div>
