--- a/index.html
+++ b/index.html
@@ -18,37 +18,37 @@ blog_card: true
 
 <p>
   The site is organized as follows. 
-  See <a href="/resources">GENOMICS</a> to access resources and tools such as browsers, InterMine instances, and other visualization tools. 
-  See <a href="/collections">DATA COLLECTIONS</a> to access data sets for download. 
-  See <a href="/tools">TOOLS</a> if you have particular tasks in mind.
+  See <a href="{{ site.base_path }}/resources/">GENOMICS</a> to access resources and tools such as browsers, InterMine instances, and other visualization tools. 
+  See <a href="{{ site.base_path }}/collections/">DATA COLLECTIONS</a> to access data sets for download. 
+  See <a href="{{ site.base_path }}/tools/">TOOLS</a> if you have particular tasks in mind.
 </p>
 
 <dl>
-  <dt><a href="{{ "/tools" | relative_url }}">Tools</a></dt>
+  <dt><a href="{{ site.base_path }}/tools/">Tools</a></dt>
   <dd>Analysis tools for soybean: gene families and phylogenies, synteny visualization, etc. search, etc.</dd>
 
-  <dt><a href="{{ "/maps" | relative_url }}">Maps</a></dt>
+  <dt><a href="{{ site.base_path }}/maps/">Maps</a></dt>
   <dd>Soybean genetic maps, the GlycineMine interface to SoyBase data, and visualization tools for exploring GWAS, QTL and diversity data.</dd>
 
-  <dt><a href="{{ "/resources" | relative_url }}">Genomics</a></dt>
+  <dt><a href="{{ site.base_path }}/resources/">Genomics</a></dt>
   <dd>Genomic resources for soybean: data sets, genome browsers, pan-gene sets, synteny visualizations, etc.</dd>
     
-  <dt><a href="{{ "/collections" | relative_url }}">Data Collections</a></dt>
+  <dt><a href="{{ site.base_path }}/collections/">Data Collections</a></dt>
   <dd>View synopses of and links to individual SoyBase Datastore collections.</dd>
   
-  <dt><a href="{{ "/projects" | relative_url }}">Projects</a></dt>
+  <dt><a href="{{ site.base_path }}/projects/">Projects</a></dt>
   <dd>Projects associated with or contributed by the soybean research-community.</dd>
   
-  <dt><a href="{{ "/community" | relative_url }}">Community</a></dt>
+  <dt><a href="{{ site.base_path }}/community/">Community</a></dt>
   <dd>Other community resources for soybean research.</dd>
   
-  <dt><a href="{{ "/about" | relative_url }}">About & Contact</a></dt>
+  <dt><a href="{{ site.base_path }}/about/">About & Contact</a></dt>
   <dd>Information about soybean data such as nomenclature, data submission. Also, a form to contact us if you have questions or suggestions!</dd>
   
-  <dt><a href="{{ "/help" | relative_url }}">Help & Tutorials</a></dt>
+  <dt><a href="{{ site.base_path }}/help/">Help & Tutorials</a></dt>
   <dd>Videos and tutorials for working with SoyBase, and other videos about soybean.</dd>
 
-  <dt><a href="{{ "/blog" | relative_url }}">Blog</a></dt>
+  <dt><a href="{{ site.base_path }}/blog/">Blog</a></dt>
   <dd>Learn about new data and tools available from LIS.</dd>
 </dl>
 
@@ -56,9 +56,9 @@ blog_card: true
 <p>LIS is funded by the USDA-ARS. LIS is developed and hosted by the National Center for Genome Resources (NCGR) and the USDA-ARS SoyBase and Legume Clade Database group at Ames, IA, with the help of many other researchers.</p>
 <div class="uk-child-width-expand@s uk-flex uk-flex-middle" uk-grid>
   <a href="https://www.ars.usda.gov/main/main.htm" target="_blank" title="USDA ARS website">
-    <img src="{{ "assets/img/usda.svg" | relative_url }}" width="150" height="auto" alt="USDA logo"/>
+    <img src="{{ site.base_path }}/assets/img/usda.svg" width="150" height="auto" alt="USDA logo"/>
   </a>
   <a href="https://www.ncgr.org/" target="_blank" title="NCGR website">
-    <img src="{{ "assets/img/ncgr.png" | relative_url }}" width="200" height="auto" alt="NCGR logo"/>
+    <img src="{{ site.base_path }}/assets/img/ncgr.png" width="200" height="auto" alt="NCGR logo"/>
   </a>
 </div>
