Provisional changes to resources/index; in progress

--- a/resources/index.html
+++ b/resources/index.html
@@ -24,7 +24,7 @@ tools_menu: true
 </p>
 
 <h2>
-  Overview of soybean genome and annotation assemblies, nomenclature and statistics
+  Overview - soybean genome and annotation statistics and nomenclature
 </h2>
 <p>
   Since the release of the first full soybean genome assembly in 2010, assemblies have been generated for more than 50 accessions, including multiple assemblies for the first reference, Williams 82 (Wm82).
