Add genome_info page under resources/, with content from soybase.org/genome_assemblies.php

--- a/resources/index.html
+++ b/resources/index.html
@@ -35,15 +35,19 @@ tools_menu: true
 </p>
 
 <p>
-  Access the genome and annotation data for download via the <a href="/collections">DATA COLLECTIONS</a> tab.
+  Access the genome and annotation data for download via the <b><a href="/collections">DATA COLLECTIONS</a> tab</b>.
 </p>
 
 <p>
-  Access the genome and annotation via JBrowse the <a href="/resources">GENOMICS</a> tab.
+  Access the genome and annotation via JBrowse the <b><a href="/resources">GENOMICS</a> tab</b>.
 </p>
 
 <p>
-  To examine statistics about genome assemblies and annotations held at SoyBase, use these two links:
+  See additional <b>details about the main reference assemblies at the <a href="/resources/genome_info">Genome Assembly page</a></b>.
+</p>
+
+<p>
+  To examine <b>statistics about all genome assemblies and annotations held at SoyBase</b>, use these two links:
 </p>
 <ul>
   <li><a href="/resources/genome_stats/">Genome assembly statistics</a></li>
