--- a/tools/ontology/index.html
+++ b/tools/ontology/index.html
@@ -94,9 +94,9 @@ tools_menu: true
   <p>
     These ontologies were developed to suggest a controlled vocabulary for soybean field growth stages (Soybean Whole Plant Growth Ontology),
     plant structure names (Soybean Structure Ontology), development (Soybean Development Ontology) and plant traits (Soybean Trait Ontology).
-    				These are only a suggestion. Input from the community will be necessary to update and
-    				extend the ontologies.  Because of this, these ontologies should also be considered a "work in progress". Where applicable, soybean specific terms
-    				have been associated with their
+    These are only a suggestion. Input from the community will be necessary to update and
+    extend the ontologies.  Because of this, these ontologies should also be considered a "work in progress". Where applicable, soybean specific terms
+    have been associated with their
     <a
       href="http://www.plantontology.org/"
       id="PO"
@@ -113,17 +113,20 @@ tools_menu: true
       target="_self"
       style="background:url(./images/external.png) center right no-repeat;padding-right:13px">Gramene Plant Trait Ontology (TO)</a>
     synonyms to facilitate cross species comparisons.
-    Please feel free to contact us for corrections, additions, and questions.<br></p>
-  <br>
+    Please feel free to contact us for corrections, additions, and questions.
+  </p>
+  
   <p>
     Since the original release of the SoyBase Ontologies, they have been re-factored at the request of the Plant Ontology
     Consortium.  This change resulted in the elimination of a separate accession system for SoyTO and SoyGRO.
-    				These terms were re-accessioned into the SoyWGR namespace and the SoyWGR prefix was changed to SOY.</p><br><p>
+    These terms were re-accessioned into the SoyWGR namespace and the SoyWGR prefix was changed to SOY.
+  </p>
+  <p>
     Currently, there are 4 divisions to SOY terms, soybean structural terms (Soybean Structure Ontology), developmental stages (Soybean Developmental Ontology),
     whole plant development terms (Soybean Whole Plant Growth Stages) and trait terms (Soybean Trait Ontology). For the trait, structure and development terms the
-    				old SoyTO and SoyGRO accessions have been added to their records as synonyms for continuity.</p>
-  <br>
-  <table>
+    old SoyTO and SoyGRO accessions have been added to their records as synonyms for continuity.
+  </p>
+    <table>
     <tbody>
       <tr>
         <td valign="TOP">
@@ -165,9 +168,8 @@ tools_menu: true
                   name="PM1945"
                   title="ISU Extension Publication PM 1945"
                   target="_self">PM 1945</a>
-                by Palle Pedersen.
-                It describes soybean growth and development from the stand point of determining the growth of a field of soybeans.  Some terms relate to a single plant,
-                								but others are applicable to a field as a whole.  Where possible, these terms are linked to their
+                by Palle Pedersen. It describes soybean growth and development from the stand point of determining the growth of a field of soybeans.  Some terms relate to a single plant,
+                but others are applicable to a field as a whole.  Where possible, these terms are linked to their
                 <a
                   href="https://browser.planteome.org/amigo/search/ontology?q=PO:0009089"
                   style="font-size: 12pt;"
@@ -236,8 +238,8 @@ tools_menu: true
                   title="Bucciarellie et al. Plant Phys 142:207-219"
                   target="_self">Bucciarelli et al. (2006) Plant Phys 142:207-219</a>.
                 In this ontology, plant development is described in terms of metamers.  Metamers consist of a plant internode and node.  Each Metamer is numbered squentially
-                							starting at 1 for the cotoledonary node on up.  Lateral branches are numbered for the metamer on the main stem from which they are derived along with the number of
-                							their lateral metamer.  This system allows the user to describe the temporal and spatial development of individual soybean plant structures.<br><br>
+                starting at 1 for the cotoledonary node on up.  Lateral branches are numbered for the metamer on the main stem from which they are derived along with the number of
+                their lateral metamer.  This system allows the user to describe the temporal and spatial development of individual soybean plant structures.<br><br>
                 <br><a
                   id="Sclose"
                   style="font-size: 12pt; color: green;"
@@ -301,8 +303,7 @@ tools_menu: true
                   title="Grin Soybean Descriptors"
                   target="_self"
                   style="background:url(./images/external.png) center right no-repeat;padding-right:13px">GRIN Soybean Descriptors</a>
-                and
-                soybean traits and QTLs described in SoyBase as well as other publications.<br><br><a
+                and soybean traits and QTLs described in SoyBase as well as other publications.<br><br><a
                   id="Topen"
                   style="color:green"
                   title="More info"
@@ -319,13 +320,13 @@ tools_menu: true
                   id="SoybeanDescriptors2"
                   name="SoybeanDescriptors"
                   title="Grin Soybean Descriptors"
-                  target="_self">GRIN Soybean Descriptors</a>
-                and
-                soybean triats and QTLs described in SoyBase as well as other publications. These terms include yeild, biotic and abiotic stress resistance, and growth and developmental traits.
-                							Traits for biotic stresses such as bacterial, fungal and viral resistance have been listed by the binomial of the causitive organism.  Where applicable, the common name of
-                							the pathogen has been included as a synonym.  This is necessary because diseases caused by an organism are called different things in different parts of the globe.  In the case of the fungi
-                							the teleomorph (sexual stage) name of the organism is used as the main identifier with the anamorph (asexual stage) name supplied as a synonym where it is known.  In cases where the causitive organism has been described under numerous binomials such as the case with some insects, the organism is listed under one binomial
-                							with the other binomials included as synonyms.  Synonyms to terms in the Plant Trait Ontology are also included where applicable to facilitate cross-species comparisons.<br>
+                  target="_self">GRIN Soybean Descriptors
+                </a>
+                and soybean triats and QTLs described in SoyBase as well as other publications. These terms include yeild, biotic and abiotic stress resistance, and growth and developmental traits.
+                Traits for biotic stresses such as bacterial, fungal and viral resistance have been listed by the binomial of the causitive organism.  Where applicable, the common name of
+                the pathogen has been included as a synonym.  This is necessary because diseases caused by an organism are called different things in different parts of the globe.  In the case of the fungi
+                the teleomorph (sexual stage) name of the organism is used as the main identifier with the anamorph (asexual stage) name supplied as a synonym where it is known.  In cases where the causitive organism has been described under numerous binomials such as the case with some insects, the organism is listed under one binomial
+                with the other binomials included as synonyms.  Synonyms to terms in the Plant Trait Ontology are also included where applicable to facilitate cross-species comparisons.<br>
                 <br><a
                   id="Tclose"
                   style="font-size: 12pt; color: green;"
