make changes to contact added new student

--- a/about/soybase_team/index.html
+++ b/about/soybase_team/index.html
@@ -3,53 +3,70 @@ title: About the SoyBase database and soybeans
 tools_menu: false
 ---
 
-<script type="text/javascript">
-function popupImage(imageurl, imagecaption)
-{
-//This function is called to open a popup window with the url listed displayed as a picture
-//Pre:  string containing URL of image source and string of caption text
-//Post: Calls a new popup window with the imageurl displayed as a img file and caption displayed below it.
-var image_win = window.open("", "image", "width=400,height=450,resizable=1,scrollbars=1");
-image_win.document.write('<html><body bgcolor="white">');
-image_win.document.write('<img src="'+imageurl+'">');
-image_win.document.write('<p>'+imagecaption+'<\/p>');
-image_win.document.write('<br><a href="javascript:window.close()">close<\/a>');
-image_win.document.write('<\/body><\/html>');
-}
-</script>
+
 <div class="container">
 				<h1 class="top_bar">About the SoyBase Team</h1>
-				<p style="float:right;"><a href="/sb_about.php" title="About the SoyBase Database and SoyBeans">Learn About The SoyBase Database And Soybeans</a></p><div style="width:35%;float:right;"></div><table class="current-table" style="width:55%;">		<tbody><tr><th colspan="3" style="text-align:left;color:#fff;background-color:#060;"><span style="font-size:14pt;">Jacqueline Campbell</span>&nbsp;‐&nbsp;Geneticist</th></tr>
-		<tr><th rowspan="4"><img style="width:6em;" src="./staff/JDCampbell2.jpg"></th><th>Role</th><td>SoyBase Co-Curator</td></tr>
+				<table class="current-table" style="width:55%;"><tbody>
+		<tr><th colspan="3" style="text-align:left;color:#fff;background-color:#060;"><span style="font-size:14pt;">Jacqueline Campbell</span>&nbsp;‐&nbsp;Geneticist</th></tr>
+		<tr><th rowspan="4"><img style="width:6em;" src="../../assets/img/team/Jacqueline_Campbell.jpg"></th><th>Role</th><td>SoyBase Co-Curator</td></tr>
 		<tr><th>Specialization</th><td>data curation, site development</td></tr>
-		<tr><th>Contact</th><td><a href="mailto:jacqueline.campbell@usda.gov">jacqueline.campbell@usda.gov</a></td></tr>
-		<tr><td colspan="2"><a href="./index.php?about=Jacqueline Campbell">Learn More About Jacqueline Campbell</a></td>
+		<tr><td colspan="2"><a href="https://www.ars.usda.gov/people-locations/person?person-id=55880">Learn More About Jacqueline Campbell</a></td>
+		<tr></tr>
+
 				</tr><tr><th colspan="3" style="text-align:left;color:#fff;background-color:#060;"><span style="font-size:14pt;">Steven Cannon</span>&nbsp;‐&nbsp;Research Geneticist</th></tr>
-		<tr><th rowspan="4"><img style="width:6em;" src="./staff/Steven Cannon.jpg"></th><th>Role</th><td>Project Administration</td></tr>
+		<tr><th rowspan="4"><img style="width:6em;" src="../../assets/img/team/Steven_Cannon.jpg"></th><th>Role</th><td>Project Administration</td></tr>
 		<tr><th>Specialization</th><td>genome assembly and analysis</td></tr>
-		<tr><th>Contact</th><td><a href="mailto:steven.cannon@usda.gov">steven.cannon@usda.gov</a></td></tr>
-		<tr><td colspan="2"><a href="./index.php?about=Steven Cannon">Learn More About Steven Cannon</a></td>
-				</tr><tr><th colspan="3" style="text-align:left;color:#fff;background-color:#060;"><span style="font-size:14pt;">David Grant</span>&nbsp;‐&nbsp;USDA Collaborator</th></tr>
-		<tr><th rowspan="4"><img style="width:6em;" src="./staff/David Grant 2.png"></th><th>Role</th><td>Retired SoyBase Curator</td></tr>
-		<tr><th>Specialization</th><td>serve as institutional memory for SoyBase</td></tr>
-		<tr><th>Contact</th><td><a href="mailto:dgrant@iastate.edu">dgrant@iastate.edu</a></td></tr>
-		<tr><td colspan="2"><a href="./index.php?about=David Grant">Learn More About David Grant</a></td>
+		<tr><td colspan="2"><a href="https://www.ars.usda.gov/midwest-area/ames/cicgru/people/steven-cannon/">Learn More About Steven Cannon</a></td>
+		<tr></tr>
+
 				</tr><tr><th colspan="3" style="text-align:left;color:#fff;background-color:#060;"><span style="font-size:14pt;">Wei Huang</span>&nbsp;‐&nbsp;Computational Biologist</th></tr>
-		<tr><th rowspan="4"><img style="width:6em;" src="./staff/WeiH.jpg"></th><th>Role</th><td>Genome Browser</td></tr>
+		<tr><th rowspan="4"><img style="width:6em;" src="../../assets/img/team/Wei_Huang.jpg"></th><th>Role</th><td>Genome Browser</td></tr>
 		<tr><th>Specialization</th><td>genome browser and bioinformatics</td></tr>
-		<tr><th>Contact</th><td><a href="mailto:wei.huang@usda.gov">wei.huang@usda.gov</a></td></tr>
-		<tr><td colspan="2"><a href="./index.php?about=Wei Huang">Learn More About Wei Huang</a></td>
+		<tr><td colspan="2"><a href="https://soybase.org/about/index.php?about=Wei%20Huang">Learn More About Wei Huang</a></td>
+		<tr></tr>
+
 				</tr><tr><th colspan="3" style="text-align:left;color:#fff;background-color:#060;"><span style="font-size:14pt;">Rex Nelson</span>&nbsp;‐&nbsp;Computational Biologist</th></tr>
-		<tr><th rowspan="4"><img style="width:6em;" src="./staff/Rex Nelson 2.jpg"></th><th>Role</th><td>Lead SoyBase Curator</td></tr>
+		<tr><th rowspan="4"><img style="width:6em;" src="../../assets/img/team/Rex_Nelson.jpg"></th><th>Role</th><td>Lead SoyBase Curator</td></tr>
 		<tr><th>Specialization</th><td>data curation, site development</td></tr>
-		<tr><th>Contact</th><td><a href="mailto:rex.nelson@usda.gov">rex.nelson@usda.gov</a></td></tr>
-		<tr><td colspan="2"><a href="./index.php?about=Rex Nelson">Learn More About Rex Nelson</a></td>
+		<tr><td colspan="2"><a href="https://www.ars.usda.gov/midwest-area/ames/cicgru/people/rex-nelson/">Learn More About Rex Nelson</a></td>
+		<tr></tr>
+
 				</tr><tr><th colspan="3" style="text-align:left;color:#fff;background-color:#060;"><span style="font-size:14pt;">Nathan Weeks</span>&nbsp;‐&nbsp;Information Technology Specialist</th></tr>
-		<tr><th rowspan="4"><img style="width:6em;" src="./staff/Nathan Weeks.jpg"></th><th>Role</th><td>Systems Administration</td></tr>
+		<tr><th rowspan="4"><img style="width:6em;" src="../../assets/img/team/Nathan_Weeks.jpg"></th><th>Role</th><td>Systems Administration</td></tr>
 		<tr><th>Specialization</th><td>informatics</td></tr>
-		<tr><th>Contact</th><td><a href="mailto:nathan.weeks@usda.gov">nathan.weeks@usda.gov</a></td></tr>
-		<tr><td colspan="2"><a href="./index.php?about=Nathan Weeks">Learn More About Nathan Weeks</a></td>
+		<tr><td colspan="2"><a href="https://www.ars.usda.gov/people-locations/person?person-id=41062">Learn More About Nathan Weeks</a></td>
+		<tr></tr>
 		</tr></tbody></table>
+
+	<h1>Current Student Employee</h1>
+	<table id="currentStudent" style="width: 100%; padding: 1em">	
+		<tbody>
+	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Kimberly Raymer</span>&nbsp;‐&nbsp;Student Developer</th></tr>
+	<tr></tr>
+	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Simon Novak</span>&nbsp;‐&nbsp;Student Developer</th></tr>
+	<tr></tr>
+	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Chee Hau Fong</span>&nbsp;‐&nbsp;Student Developer</th></tr>
+	<tr></tr>
+	</tbody></table>
+		
+	<h1>Past Employee</h1>
+	<table id="pastEmployee" style="width: 100%; padding: 1em">	
+		<tbody>
+	<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">David Grant</span>&nbsp;‐&nbsp;Data Curation</th></tr>
+	</tbody></table>
+
+
+	<h1>Past Student Employee</h1>
+	<table id="pastStudentEmployee" style="width: 100%; padding: 1em">	
+		<tbody>
+			<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">William Hardison</span>&nbsp;‐&nbsp;Student Curator</th></tr>
+			<tr></tr>
+			<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Abigial Pigatto</span>&nbsp;‐&nbsp;Student Curator</th></tr>
+			<tr></tr>
+			<tr><th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;"><span style="font-size:14pt;">Marlene Dorneich-Hayes</span>&nbsp;‐&nbsp;Student Curator</th></tr>
+			<tr></tr>
+</tbody></table>
+
 <script>
 function staffView() {
   var x = document.getElementById("former_staff");
