--- a/community/soygec/index.html
+++ b/community/soygec/index.html
@@ -1,6 +1,7 @@
 ---
 title: Soybean Genomics Executive Committee
-tools_menu: false
+layout: default
+sitemap: community/soygec
 ---
 
 <h2>Soybean Genomics Executive Committee</h2>
@@ -13,7 +14,7 @@ tools_menu: false
 
 <p>The SoyGEC seeks to ensure excellence in research quality and clarity in communication of needs and priorities. Without encumbering individual initiative, the SoyGEC will encourage coordination of dedicated research teams finding solutions to soybean problems of national and international importance.</p>
 
-<a href="https://data.legumeinfo.org/data/annex/Glycine/max/plans/SoyGEC/SoyGEC_Policies_Procedures_083122.docx">Soybean Genomics & Genetics Consortium: Policies & Procedures</a><br> 
+<a href="https://data.legumeinfo.org/data/annex/Glycine/max/plans/SoyGEC/SoyGEC_Policies_Procedures_083122.pdf">Soybean Genomics & Genetics Consortium: Policies & Procedures</a><br> 
 
 <h3>Current SoyGEC Strategic Plan and Accomplishments Reports</h3>
     <ul style='list-style:none;'>
