--- a/tools/gcvit/index.html
+++ b/tools/gcvit/index.html
@@ -1,25 +1,4 @@
 ---
-title: GCViT
-sitemap: tools
-tools_menu: true
+layout: iframe
+iframe_url: "https://gcvit.soybase.org/"
 ---
-
-<h1>Informatic Tools: GCViT</h1>
-
-<p>
-  GCViT is a multiple chromosome visualisation tool for visualizing resequencing or SNP array data.
-  GCViT permits comparison of multiple accessions to a reference accession within a single dataset, to visually identify regions of similarities and differences across the genome.
-</p>
-
-<p>
-  View a <a href="https://youtu.be/B2gPVUipWo0">video tutorial</a>.
-</p>
-
-<p>
-  GCViT is currently available for the folowing genera:
-</p>
-
-<ul>
-  <li><a href="https://soybase.org/gcvit/">Glycine @ SoyBase <span uk-icon="icon: forward"></span></a></li>
-</ul>
-
