--- a/about/soybase_team/index.html
+++ b/about/soybase_team/index.html
@@ -40,47 +40,47 @@ Team:
     # past employee
   - name: David Grant
     role: Data Curation
-    status: pastTeam
+    status: Alumni
   - name: Robert Baker
     role: Data Curation
-    status: pastTeam
+    status: Alumni
   - name: Victoria Blake 
     role: Data Curation
-    status: pastTeam
+    status: Alumni
   - name: Anne Brown
     role: Postdoctoral Scholar
-    status: pastTeam
+    status: Alumni
   - name: Shawn Conners
     role: Programmer
-    status: pastTeam
+    status: Alumni
   - name: Kevin Feeley
     role: Programmer, Web Development
-    status: pastTeam
+    status: Alumni
     # past student employee
   - name: William Hardison 
     role: Student Curator
-    status: pastStudent
+    status: Alumni
   - name: Abigial Pigatto
     role: Student Curator
-    status: pastStudent
+    status: Alumni
   - name: Marlene Dorneich-Hayes 
     role: Student Curator
-    status: pastStudent
+    status: Alumni
   - name: Laura Climer
     role: Student Employee
-    status: pastStudent
+    status: Alumni
   - name: Katrina Kohn
     role: Student Employee
-    status: pastStudent
+    status: Alumni
   - name: Samuel Sterns
     role: Student Employee
-    status: pastStudent
+    status: Alumni
   - name: Jonathan Stroyan
     role: Student Employee
-    status: pastStudent
+    status: Alumni
   - name: Daniel Tarte
     role: Student Employee
-    status: pastStudent
+    status: Alumni
 
 
 ---
@@ -98,14 +98,12 @@ Team:
       </th>
     </tr>
     <tr>
-      <th rowspan="4">
-        <img style="width:6em;" src="../../assets/img/team/{{ member.name | replace: ' ', '_' }}.jpg">
-      </th>
-      <th>Role</th>
+
+      <th style="text-align:left">Role</th>
       <td>{{ member.role }}</td>
     </tr>
     <tr>
-      <th>Specialization</th>
+      <th style="text-align:left">Specialization</th>
       <td>{{ member.specialization }}</td>
     </tr>
     <tr>
@@ -133,10 +131,10 @@ Team:
   </tbody>
 </table>
 
-<h1>Past Employee</h1>
-<table id="currentStudent" style="width: 100%; padding: 1em">
+<h1>Alumni</h1>
+<table id="Alumni" style="width: 100%; padding: 1em">
   <tbody>
-    {% assign past_team = page.Team | where: "status", "pastTeam" %}
+    {% assign past_team = page.Team | where: "status", "Alumni" %}
     {% for member in past_team %}
     <tr>
       <th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;">
@@ -147,19 +145,3 @@ Team:
     {% endfor %}
   </tbody>
 </table>
-
-<h1>Past Student Employee</h1>
-<table id="currentStudent" style="width: 100%; padding: 1em">
-  <tbody>
-    {% assign pastStudent = page.Team | where: "status", "pastStudent" %}
-    {% for member in pastStudent %}
-    <tr>
-      <th colspan="3" style="text-align:left;padding:0.25em;color:black;background-color:#F5F5F5;">
-        <span style="font-size:14pt;">{{ member.name }}</span>&nbsp;‐&nbsp;{{ member.role }}
-      </th>
-    </tr>
-    <tr></tr>
-    {% endfor %}
-  </tbody>
-</table>
-</div>
